--- a/css/loading.css
+++ b/css/loading.css
@@ -10,12 +10,12 @@ html, body {
 }
 
 .loader {
-    width: 150px;
-    height: 150px;
-    border: 16px solid rgba(255, 255, 255, 0.2);
-    border-top: 16px solid white;
+    width: 100px;
+    height: 100px;
+    border: 12px solid rgba(255, 255, 255, 0.2);
+    border-top: 12px solid white;
     border-radius: 50%;
-    animation: spin 1s linear infinite;
+    animation: spin 1s cubic-bezier(0.4, 0.0, 0.2, 1) infinite;
 }
 
 @keyframes spin {
